--- a/assets/index.css
+++ b/assets/index.css
@@ -11,17 +11,17 @@ Avalanche maroon #6f253c;
 html, body {
     max-width: 100%;
     overflow: hidden;
+    margin: 0;
 }
 
 body {
-    width: 100vw; 
-    min-height: 100vh;
+    width: 100%; 
+    min-height: 100%;
     overflow: hidden;
     background: url(images/concrete_seamless.png);
     background-size: contain;
     background-attachment: fixed;
     margin: 0;
-    overflow: hidden;
     z-index: -100;
 }
 
@@ -32,9 +32,10 @@ body {
     display: -webkit-flex;
     display: flex;
     position: absolute;
-    width: 100vw;
-    min-height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
     margin: 0 auto;
+    overflow: hidden;
     justify-content: center;
 }
 
@@ -64,14 +65,12 @@ h1 {
 }
 
 .clock {
-    width: 100%;
-    height: 50%;
-    top: 28%;
     min-width: 6rem;
     max-width: 5rem;
+    top: 28%;
     height: 4rem;
     line-height: 4rem;
-    margin: 0 3rem;
+    margin: 0 2.5rem;
     padding: 2rem 4rem;
     font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
     font-size: 72px;
@@ -80,7 +79,7 @@ h1 {
     -webkit-font-smoothing: antialiased;
     background-color: rgba(110, 170, 250, 0.2);
     color: #5d1d31;
-    border: 1px solid rgba(110, 170, 250, 0.5);
+    border: 1px solid rgba(110, 170, 250, 0.3);
     border-bottom: 1px solid rgba(110, 170, 250, 0.5);
     box-shadow: 0 0 1px #143b91;
     border-radius: 5px 35px;
@@ -125,6 +124,7 @@ h1 {
     position: absolute;
     min-width: 100%;
     min-height: 40%;
+    max-height: 40%;
     bottom: 0;
     background-color:rgba(110, 170, 250, 0.1);
     z-index: 6;
@@ -158,26 +158,28 @@ h1 {
 
 @media only screen and (max-width: 992px) {
     h1 {
-        margin: 3rem auto;
-        font-size: 16px;
+        margin: 2rem auto;
+        font-size: 28px;
     }
     #clockContainer {
         margin-top: 10rem;
         margin-bottom: 1rem;
-        padding-left: 3%;
-        padding-right: 3%;
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
     .clock { 
         min-width: 3rem;
         max-width: 3rem;
         height: 1rem;
-        margin: 0 0.5rem;
-        padding: 12px 20px;
+        margin: 0 1%;
+        padding: 10px 18px;
         border-radius: 5px 15px;
         line-height: 1rem;
         font-size: 20px;
+        justify-content: center;
     }
     .colon {
-        font-size: 48px;
+        font-size: 44px;
+        line-height: 1rem;
     }
 }
